[project]
name = "pull-file"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pull-file = "pull_file:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
